--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,15 @@
            width: 100%;
            height: 100%;
        }
+      .port-item
+       {
+           width: 30%;
+       }
+       .port-item:hover
+        {
+            opacity: 0.8%;
+            cursor: pointer;
+        }
   }
 
 .bg-black
