--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,3 +21,11 @@
       color: #ffffff;
       background: #000000;
   }
+
+  @media(min-width: 1199px)
+    {
+        .port-item
+         {
+             padding: 3em !important;
+         }
+    }
