--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,7 +11,7 @@
        }
        .port-item:hover
         {
-            opacity: 0.8%;
+            opacity: 0.8;
             cursor: pointer;
         }
   }
