Compiled css style fixing bug in code

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 #main-header .port-item {
   width: 30%; }
 #main-header .port-item:hover {
-  opacity: 0.8%;
+  opacity: 0.8;
   cursor: pointer; }
 
 .bg-black {
